Fixed colour contrast issue on cards

--- a/app/webpacker/styles/category.scss
+++ b/app/webpacker/styles/category.scss
@@ -61,7 +61,6 @@
 
       h2,
       h3 {
-        color: $blue-dark;
         text-decoration: underline;
       }
 
